--- a/Views/Manufacturer/UploadPoster.cshtml
+++ b/Views/Manufacturer/UploadPoster.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Upload Poster";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
