--- a/Views/Manufacturer/ViewCampaigns.cshtml
+++ b/Views/Manufacturer/ViewCampaigns.cshtml
@@ -1,6 +1,7 @@
 @model ViewCampaignsViewModel
 @{
     ViewData["Title"] = "View Campaigns";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <style>
