--- a/Views/Campaigns/CreatePointsRewardCampaign.cshtml
+++ b/Views/Campaigns/CreatePointsRewardCampaign.cshtml
@@ -1,6 +1,7 @@
 @model HaldiramPromotionalApp.ViewModels.PointsRewardCampaignViewModel
 @{
     ViewData["Title"] = "Create Points Reward Campaign";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
