--- a/Views/Campaigns/CreatePointsToCashCampaign.cshtml
+++ b/Views/Campaigns/CreatePointsToCashCampaign.cshtml
@@ -1,6 +1,7 @@
 @model HaldiramPromotionalApp.ViewModels.PointsToCashCampaignViewModel
 @{
     ViewData["Title"] = "Create Points to Cash Campaign";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
