--- a/Views/Campaigns/CreateSessionDurationRewardCampaign.cshtml
+++ b/Views/Campaigns/CreateSessionDurationRewardCampaign.cshtml
@@ -1,6 +1,7 @@
 @model HaldiramPromotionalApp.ViewModels.SessionDurationRewardCampaignViewModel
 @{
     ViewData["Title"] = "Create Session Duration Reward Campaign";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
