--- a/Views/Manufacturer/CreateCampaign.cshtml
+++ b/Views/Manufacturer/CreateCampaign.cshtml
@@ -1,5 +1,6 @@
 @{
     ViewData["Title"] = "Create Campaign";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
