--- a/Views/Manufacturer/Products/Details.cshtml
+++ b/Views/Manufacturer/Products/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Product Details";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
